Clay: more Sonar-related code cleanup